videos section now correctly aligned

--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -232,8 +232,11 @@ height: 707px;
   width: 1228px;
   height: 450px;
   display: flex;
+  flex-direction: column;
   align-items: center;
+  /* align-items: center;
   justify-content: center;
+   */
 
 }
 .video-box {
@@ -273,7 +276,7 @@ height: 707px;
   gap: 79px;
 }
 
-.video-box .text-box {
+.video-box h1 {
   height: 40px;
   width: 294px;
 }
